<resources>
    <string name="app_name">AndroidSms</string>
    <!-- Settings Activity Title -->
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Sms Form -->
    <string name="send_sms_example">Sending SMS Example</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="default_phone_number">+43 681 20759860</string>
    <string name="enter_sms">Enter SMS</string>
    <string name="default_sms_text">Sending test sms from AndroidSms https://github.com/heinrichelsigan/AndroidSms</string>
    <string name="send_sms">Send SMS</string>
    <string name="sms_sent">SMS sent!</string>
    <string name="sending_sms_failed">Sending SMS failed, please try again.</string>
</resources>